objects/LAT_ActionClientPaymentLine__c.object
<CustomObject>
    <fields>
        <fullName>LAT_ActionClientPayment__c</fullName>
        <label>Action Client Payment</label>
        <referenceTo>LAT_ActionClientPayment__c</referenceTo>
        <relationshipLabel>Action Client Payment Lines</relationshipLabel>
        <relationshipName>ActionClientPaymentLines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LAT_Description__c</fullName>
        <label>Descrição</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LAT_Value__c</fullName>
        <label>Valor/Quantidade</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Action Client Payment Line</label>
    <nameField>
        <displayFormat>ACP-{0000}</displayFormat>
        <label>Action Client Payment Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Client Payment Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>